# ingenierIA-tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  bacon.toml
.github/workflows/: ci.yml  release.yml
Formula/: factoria.rb
crates/ingenieria-api/: Cargo.toml
crates/ingenieria-domain/: Cargo.toml
crates/ingenieria-runtime/: Cargo.toml
crates/ingenieria-runtime/src/: config_validation.rs  lib.rs
crates/ingenieria-runtime/src/audit/: mod.rs  redactor.rs  storage.rs
crates/ingenieria-runtime/src/memory/: context.rs  mod.rs  parser.rs  store.rs  types.rs
crates/ingenieria-runtime/src/permissions/: mod.rs  policy.rs
crates/ingenieria-runtime/src/session/: entry.rs  forking.rs  meta.rs  mod.rs  store.rs
crates/ingenieria-tools/: Cargo.toml
crates/ingenieria-tools/src/: lib.rs  retry.rs
crates/ingenieria-tools/src/bash/: mod.rs
crates/ingenieria-tools/src/bash/validators/: destructive.rs  mod.rs  network_safety.rs  path_traversal.rs  readonly.rs  secrets_detect.rs  sed_safety.rs  workspace_boundary.rs
crates/ingenieria-tools/src/hooks/: config.rs  mod.rs  types.rs
crates/ingenieria-tools/src/mcp/: mod.rs
crates/ingenieria-ui/: Cargo.toml
docs/: ARQUITECTURA_Y_ESTANDARES.md  AUDITORIA.md  COMANDOS.md  ERROR_HANDLING.md  ESTRUCTURA_PROYECTO.md  FLUJOS_Y_OBJETIVOS.md  KEYBINDINGS.md  LINEAMIENTOS_VISUALES.md  OWNERSHIP_Y_PERFORMANCE.md
docs-site/: .gitignore  CLAUDE.md  astro.config.mjs  package.json  skills-lock.json
installers/macos/: build-pkg.sh
installers/windows/: factoria.nsi
npm/ingenieria/: .npmignore  package.json
npm/ingenieria-darwin-arm64/: package.json
npm/ingenieria-darwin-x64/: package.json
npm/ingenieria-linux-x64/: package.json
npm/ingenieria-win32-x64/: package.json
scripts/: install-local.ps1  install-local.sh  install.ps1  install.sh  npm-prepare.sh  npm-verify.sh  sync-version.sh
src/: actions.rs  bootstrap.rs  config.rs  main.rs
src/app/: agents_handler.rs  autoskill_handler.rs  bridge_handler.rs  chat.rs  chat_codeblocks.rs  chat_history.rs  chat_tools.rs  commands.rs  config_tool_handler.rs  cron_handler.rs  elicitation_handler.rs  handler_actions.rs  handler_events.rs  history_bridge.rs  history_search_handler.rs  hooks_handler.rs  input_dx_handler.rs  keys.rs  keys_chat.rs  keys_splash.rs  keys_wizard.rs  lsp_handler.rs  memory_commands.rs  mod.rs  monitor_handler.rs  plugin_handler.rs  quit_handler.rs  slash_commands.rs  spawners.rs  spawners_chat.rs  team_handler.rs  tests.rs  todos_handler.rs  transcript_handler.rs  wizard.rs
src/domain/: mod.rs
src/registries/: mod.rs
src/services/: autoskill_map.rs  cache.rs  chat_metrics_persist.rs  codeblocks.rs  compliance.rs  context.rs  copilot.rs  copilot_chat.rs  doc_cache.rs  doctor.rs  draft_store.rs  features.rs  history.rs  ingenieria_client.rs  init.rs  init_gen.rs  init_templates.rs  mentions.rs  mod.rs  monitor.rs  paste_handler.rs  plugins.rs  prompt_suggestions.rs  recovery_engine.rs  skill_installer.rs  sync.rs  uri.rs  worktree.rs
src/state/: autoskill_picker.rs  cache_state.rs  chat_state.rs  chat_types.rs  command_state.rs  cost.rs  dashboard_state.rs  event_state.rs  history_search.rs  init_state.rs  input_undo.rs  mention_picker.rs  message_queue.rs  mod.rs  selectors.rs  transcript.rs  wizard_state.rs
src/ui/: chat.rs  chat_render.rs  chat_tools.rs  dashboard.rs  diff_render.rs  diff_syntax.rs  diff_word.rs  hyperlinks.rs  init.rs  mod.rs  msg_height.rs  sidebar.rs  tool_display.rs  virtual_scroll.rs  wizard.rs  wizard_auth.rs  wizard_model.rs
src/utils/: mod.rs
src/workers/: cron_worker.rs  file_watcher.rs  health.rs  hook_events.rs  keyboard.rs  lifecycle.rs  mod.rs  process_monitor.rs  sse.rs  tick.rs  tool_events.rs
vscode-ext/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  tsconfig.json
(+196 files in other folders)
