[package]
name        = "ingenieria-runtime"
version.workspace = true
edition.workspace = true
description = "Runtime services for ingenierIA TUI — session, audit, memory, permissions, config validation"

[dependencies]
ingenieria-domain = { path = "../ingenieria-domain" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
dirs            = "6"
strsim          = "0.11"
tracing         = "0.1"

[dev-dependencies]
tempfile = "3"
